@@ -85,8 +85,9 @@ hosts=Hosts
 tid=Scan Classes
 
 [ui.administration]
-display=services,adduser,ui_options
+display=services,logs,adduser,ui_options
 services=Services
+logs=Logs
 adduser=Add User
 ui_options=UI Options
 
